--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row g-0">
         <div class="col-6">
-            <form method="POST" action="{% url 'admin_crud_products' %}" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                     {% if field.name == 'product_image' %}
