--- a/templates/base.html
+++ b/templates/base.html
@@ -90,13 +90,11 @@
                 </li>
                 {% endif %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'account_logout' %}">Logout <span class="
-                                        sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'account_logout' %}">Logout <span class="sr-only">(current)</span></a>
                 </li>
                 {% else %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'account_login' %}">Login <span class="
-                                                                        sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'account_login' %}">Login <span class="sr-only">(current)</span></a>
                 </li>
                 {% endif %}
             </ul>
