enhanced product component template to a more user-friendly version

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'bag/css/bag.css' %}">
+    <link rel="stylesheet" href="{% static 'products/css/product.css' %}">
 
     {% endblock %}
 
