--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,11 +11,10 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-4 logo-font text-black">
+<div class="container">
+    <div class="row g-0">
+        <div class="col-7 col-md-6">
+            <h1 class="display-4">
                 {{ category_name }}
                 {% if category_name == 'All' %}
                     Products
