--- a/products/templates/unicorn/product.html
+++ b/products/templates/unicorn/product.html
@@ -1,59 +1,75 @@
-<div class="col-3 col-md-6">
-    <img src="{{ product_image_url }}" alt="immage of the product" style="height: 250px" />
+<div class="col-4 product-card">
+    <div class="product-combinations-in-cart-widget col-12">
+        {% if str_id in bag %}
+            <i class="fas fa-shopping-cart">:</i>
+        {% endif %}
+        {% for item in bag_items %}
+            {% if item.item_id == str_id %}
+                &nbsp
+                <div style="background-color: {{item.color}}" class="color-size-button-in-cart">{{item.size}} </div>
+            {% endif %}
+        {% endfor %}
+        <hr>
+    </div>
+    <img src="{{ product_image_url }}" alt="immage of the product">
     <p>{{ product.name }}</p>
     <p>{{ product.description }}</p>
     <p>EUR {{ product.price }}</p>
-    <div class="form-group w-50">
-        <div class="input-group">
-            <input class="form-control qty_input" type="number"
-                name="quantity" value="{{component_quantity}}" min="1" max="99"
-                data-item_id="{{ product.id }}"
-                id="id_qty_{{ product.id }}">
-            <div>
-                <button class="increment-qty btn btn-black rounded-0" u:click="increment_component_quantity">
-                    <span class="icon">
-                        <i class="fas fa-arrow-up"></i>
-                    </span>
-                </button>
-            </div>
-            <div>
-                <button class="decrement-qty btn btn-black rounded-5" u:click="decrement_component_quantity">
-                    <span class="icon">
-                        <i class="fas fa-arrow-down"></i>
-                    </span>
-                </button>
-            </div>
-        </div>
-        <div class="input-group">
+    <button u:click="toggle_detail" class="btn form-control" type="button" id="product-detail-button-{{ str_id}}">
+            <i class="fas fa-arrow-circle-down"> </i>buy
+    </button>
+    <div class="form-group row g-0" if="product-detail-card-{{str_id}}" {% if show_detail %}style="display:visible" {%else%} style="display:none" {%endif%}>
+        <div class="col-9">
             {% if component_quantity_changed and in_bag %}
-                <button style="display: none" u:click="add_to_bag" onclick="updateBagstatus()"> Add to bag </button>
-                <button class="adjust-product-bag-btn" style="display:block" u:click="adjust_bag" onclick="updateBagstatus()"> Adjust bag </button>
+                <button style="display: none" u:click="add_to_bag" onclick="updateBagstatus()" class="form-control"> Add to cart </button>
+                <button style="display:block" u:click="adjust_bag" onclick="updateBagstatus()" class="form-control"> Adjust </button>
             {% else %}
                 {% if in_bag %}
-                    <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: block" disabled> Add to bag <i class="fas fa-check-circle"></i></button>
-                    <button  class="adjust-product-bag-btn" style="display:none" u:click="adjust_bag" onclick="updateBagstatus()"> Adjust bag </button>
+                    <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: block" disabled class="form-control">
+                        In the cart <i class="fas fa-check"></i>
+                    </button>
+                    <button  class="adjust-product-bag-btn" style="display:none" u:click="adjust_bag" onclick="updateBagstatus()" class="form-control"> Adjust </button>
                 {% else %}
-                    <button style="display: block" u:click="add_to_bag" onclick="updateBagstatus()"> Add to bag </button>
-                    <button style="display:none" u:click="adjust_bag" onclick="updateBagstatus()"> Adjust bag </button>
+                    <button style="display: block" u:click="add_to_bag" onclick="updateBagstatus()" class="form-control"> Add to cart </button>
+                    <button style="display:none" u:click="adjust_bag" onclick="updateBagstatus()" class="form-control"> Adjust </button>
                 {% endif %}
             {% endif %}
-        </div>
-        <div class="input-group">
             <button u:click="remove_from_bag" onclick="updateBagstatus()"
-            {% if in_bag %} style = "visibility: visible;" {%else%} style = "visibility:hidden;" {%endif%}>
-                Remove item
+                class="form-control" {% if in_bag and show_detail%} style = "visibility: visible;" {%else%} style = "visibility:hidden;" {%endif%}>
+                Remove <i class="fas fa-trash"></i>
             </button>
+
+            <div class="input-group">
+            <p> select colors </p>
+                {% for color_instance in product.colors.all %}
+                    <button u:click="select_size_or_color('{{color_instance.name_EN}}', 'color')"
+                            data-btn-info="{{color_instance.name_EN}}"
+                            id="button-{{color_instance.name_EN}}-{{product.id}}"
+                            class="color-size-button"
+                            style="background-color:{{color_instance.hexcolor}};">
+                    </button>
+                {% endfor %}
+            </div>
+            <div class="input-group">
+                <p> select sizes </p>
+                {% for size_instance in product.sizes.all %}
+                    <button u:click="select_size_or_color('{{size_instance.size}}', 'size')"
+                            data-btn-info="{{size_instance.size}}" id="button-{{size_instance.size}}-{{product.id}}"
+                            class="color-size-button">{{size_instance.size}}
+                    </button>
+                {% endfor %}
+            </div>
         </div>
-        <div class="input-group">
-             {% for color_instance in product.colors.all %}
-                <div id="button-{{color_instance}}-{{product.id}}" style="background-color:{{color_instance.hexcolor}}; border-radius: 50%" u:click="select_size_or_color('{{color_instance.name_EN}}', 'color')">{{color_instance.name_EN}}</div>
-            {% endfor %}
-        </div>
-        <div class="input-group">
-            {% for size_instance in product.sizes.all %}
-                <div id="button-{{size_instance}}-{{product.id}}" style="width:40px; height:40px; background-color:lightblue; border-radius: 50%;" u:click="select_size_or_color('{{size_instance.size}}', 'size')">{{size_instance.size}}</div>
-            {% endfor %}
-            <br>
+        <div class="col-3">
+            <button class="increment-qty btn form-control" u:click="increment_component_quantity">
+                <i class="fas fa-arrow-up"></i>
+            </button>
+            <input class="form-control" type="number" disabled
+                name="quantity" value="{{component_quantity}}" min="1" max="99"
+                id="id_qty_{{ product.id }}">
+            <button class="decrement-qty btn form-control" u:click="decrement_component_quantity">
+                <i class="fas fa-arrow-down"></i>
+            </button>
         </div>
     </div>
     <hr>
