--- a/templates/base.html
+++ b/templates/base.html
@@ -99,6 +99,11 @@
     </nav>
     {% block content %}
     {% endblock %}
+    {% block footer %}
+        <footer>
+
+        </footer>
+    {% endblock %}
     {% block postloadjs %}
     <!--<script type="text/javascript" src="{% static 'products/js/rotate_products.js' %}"></script>-->
     <script type="text/javascript" src="{% static 'products/js/product_component_selectors.js' %}"></script>
