--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
+<div class="container bag-body">
     {% if messages %}
         {% for message in messages %}
             <p> {{message}} </p>
@@ -21,13 +21,14 @@
     <div class="row">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-4 logo-font text-black">
-                Bag
+                Your cart
             </h1>
         </div>
     </div>
+    <hr>
     {% for item in bag_items %}
             {% unicorn 'item_in_bag' item=item item_index=forloop.counter0 product=item.product %}
     {% endfor %}
-    <button type="button"><a class="nav-link" href="{% url 'checkout' %}">Checkout</a>
+    <button type="button" class="btn btn-gate form-control"><a class="nav-link" href="{% url 'checkout' %}">Checkout</a></button>
 </div>
 {% endblock %}
