--- a/templates/base.html
+++ b/templates/base.html
@@ -50,17 +50,12 @@
 
 <body>
     {% csrf_token %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="{% url 'home' %}">Daniela Handmade</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -77,6 +72,7 @@
                     </button>
                     {% unicorn 'nav_categories' %}
                 </div>
+
                 {% if user.is_authenticated %}
                 {% if user.is_superuser  %}
                 <li class="nav-item">
@@ -97,13 +93,16 @@
 
         </div>
     </nav>
-    {% block content %}
-    {% endblock %}
-    {% block footer %}
-        <footer>
+    <section class="body-section">
+        {% block content %}
+        {% endblock %}
+    </section>
+    <footer>
+        {% block footer %}
 
-        </footer>
-    {% endblock %}
+        {% endblock %}
+    </footer>
+
     {% block postloadjs %}
     <!--<script type="text/javascript" src="{% static 'products/js/rotate_products.js' %}"></script>-->
     <script type="text/javascript" src="{% static 'products/js/product_component_selectors.js' %}"></script>
