--- a/home/templates/unicorn/nav_categories.html
+++ b/home/templates/unicorn/nav_categories.html
@@ -2,7 +2,7 @@
 
     <button class="dropdown-item" type="button">
         {% if category_name == 'All' %}
-            <a class="nav-link text-dark" href="{% url 'products' 'All' %}">All Products</a>
+            <a class="nav-link text-dark" href="{% url 'products' 'All' %}"><strong>All Products</strong></a>
         {% else %}
             <a class="nav-link" href="{% url 'products' 'All' %}">All Products</a>
         {% endif %}
@@ -10,7 +10,7 @@
     {% for category in categories %}
         <button class="dropdown-item" type="button">
             {% if category_name == category.name %}
-                <a class="nav-link text-dark" href="{% url 'products' category.name%}">{{ category.name }}</a>
+            <a class="nav-link" href="{% url 'products' category.name%}"><strong>{{ category.name }}</strong></a>
             {% else %}
                 <a class="nav-link" href="{% url 'products' category.name%}">{{ category.name }}</a>
         </button>
