Further enhanced products page with a more user friendly way of finding what configurations of th eproduct are in the bag

--- a/products/static/products/css/product.css
+++ b/products/static/products/css/product.css
@@ -9,8 +9,8 @@
     font-weight: bold;
 }
 .product-card-img-div{
-    height:350px;
-    width:350px;
+    height:20em;
+    width:20em;
     border-radius: 10px;
     background-size: contain;
     background-repeat: no-repeat;
